tests/fixtures/negative/010_reserved_word_as_var.js
// Expected error: reserved word as variable name
var class = 1;
